--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,5 @@
-/home/owealex/.tmux.conf
+unbind C-b
+set -g prefix C-s
+bind C-s send-prefix
+bind | split-window -hc "#{pane_current_path}"
+bind - split-window -vc "#{pane_current_path}"
